--- a/pota.tex
+++ b/pota.tex
@@ -39,7 +39,7 @@ $^1$ INAF -- Osservatorio Astronomico di Capodimonte, Salita Moiariello, 16, 801
 
 \maketitle
 \begin{abstract}
-We present the results of a large spectroscopic survey of extragalactic globular clusters (GCs) in the core of the Fornax cluster as part of the Fornax Deep Survey. GC candidates were selected in multi-band VST and VISTA images. About 4500 low resolution spectra (from 4800 to 10000\AA) were observed in 25 VLT/VIMOS masks covering the central 1 deg$^2$ around the dominant galaxy NGC~1399. We describe the methodology used for data reduction and data analysis. We found a total of 387 unique physical objects (372 GCs and 15 ultra compact dwarfs) associated to galaxies in the sampled field. Most of these objects are associated to NGC~1399, with only 10\% likely associated to other giant galaxies. This new dataset is complementary to the many GC catalogues already present in the literature and it brings the total number of trace particles around  NGC~1399 to over a thousand. This is a valuable reference for the study of cluster environments and for the dynamics and kinematics of giant galaxies. 
+We present the results of a large spectroscopic survey of extragalactic globular clusters (GCs) in the core of the Fornax cluster, as part of the Fornax Deep Survey. GC candidates were selected in multi-band VST and VISTA images. About 4500 low resolution spectra (from 4800 to 10000\AA) were observed in 25 VLT/VIMOS masks covering the central 1 deg$^2$ around the dominant galaxy NGC~1399. We describe the methodology used for data reduction and data analysis. We found a total of 387 unique physical objects (372 GCs and 15 ultra compact dwarfs) associated to galaxies in the sampled field. Most of these objects are associated to NGC~1399, with only 10\% likely associated to other giant galaxies. This new dataset is complementary to the many GC catalogues already present in the literature and it brings the total number of trace particles around  NGC~1399 to over a thousand. This is a valuable reference for the study of cluster environments and for the dynamics and kinematics of giant galaxies. 
 
 \end{abstract}
 
@@ -49,24 +49,24 @@ galaxies:star clusters -- galaxies:evolution-- galaxies: kinematics and dynamics
 
 \section{Introduction}
 
-Nearby galaxy clusters are ideal laboratories for studying the evolution of low- and high mass galaxies as well as dense stellar systems (globular clusters, compact dwarf galaxies, etc.) in dense environments. The Virgo and Fornax clusters are the most nearby clusters where detailed observations on the galaxy and small stellar system content can be performed. 
+Nearby galaxy clusters are ideal laboratories for studying the evolution of low- and high mass galaxies as well as dense stellar systems (globular clusters, compact dwarf galaxies, etc.) in dense environments. The Virgo and Fornax clusters are closest galaxy clusters, hence provide a unique laboratory to test galaxy formation theories. 
 
-The Fornax Deep Survey\footnote{ESO programme ID (094.B-0687)} (FDS) which aims at studying the formation and assembly of the the Fornax Cluster out to its viral radius with a variety of observations which include
-deep photometry, multi-object and integral spectroscopy and the cross-match with other wavelength observations like X-rays (e.g. Paolillo et al. 2002).
-The cornerstone of FDS is deep multiband ($u$, $g$, $r$ and $i$) imaging data from the VST/OmegaCam camera covering an area of $\sim30deg^2$ of the cluster out the viral radius . The area includes also the Fornax-A subgroups, hence providing a full coverage of the cluster structure under assembly.  The depth of the imaging dataset reaches $\sim 30$ mag/arcsec$^2$ in the $g-band$ (see Iodice et al. 2016, 2017), among the deepest acquired on the cluster so far. In the galaxy cluster core VISTA/VIRCAM observations in J and K (Ks = 23.4 AB mag, and J = 23.4 AB) are also available (see e.g. Munoz et al. 2015), to complement the optical data and optimise galaxy and globular cluster membership and the selection of follow-up targets (e.g. globular clusters, GCs hereafter, and/or Ultra Compact Dwarf galaxies, UCDs hereafter). 
+The Fornax Deep Survey\footnote{ESO programme ID (094.B-0687)} (FDS) aims to study the formation and assembly of the Fornax Cluster out to its viral radius with a variety of observations. These include
+deep photometry, multi-object and wide-field spectroscopy, supplemented by cross-match with other wavelength observations such as  X-rays (e.g. Paolillo et al. 2002).
+The cornerstone of FDS is deep multiband ($u$, $g$, $r$ and $i$) imaging data from the VST/OmegaCam camera covering an area of $\sim30$ $deg^2$ of the cluster out the viral radius. The area also includes the Fornax-A subgroups, hence providing a full coverage of the cluster structure under assembly.  The depth of the imaging dataset reaches $\sim 30$ mag/arcsec$^2$ in the $g$-band (see Iodice et al. 2016, 2017), among the deepest acquired on the cluster so far. In the galaxy cluster core, VISTA/VIRCAM observations in J and K (Ks = 23.4 $AB$ mag, and J = 23.4 $AB$ mag) are also available (see e.g. Munoz et al. 2015), to complement the optical data and optimise galaxy and globular cluster membership and the selection of follow-up targets (e.g. globular clusters, GCs hereafter, and/or Ultra Compact Dwarf galaxies, UCDs hereafter). 
 
 The multi-band deep images have been used to study the light distribution and colors of cluster galaxies out to 8-10 effective radii and beyond to characterise the faint galaxy haloes and have revealed the presence of ultra-faint stellar structures in the core of Fornax: fingerprints of past and ongoing interaction between galaxies falling into the deep potential well of the cluster (Iodice et al. 2016). The same conclusion is backed-up by the complex distribution of globular clusters in the Fornax cluster, studied by D’Abrusco et al. (2016) using the same data (Cantiello et al. 2017).
 
-The Fornax cluster is the most massive galaxy structure after the Virgo cluster within 20 Mpc and it is an ideal target to study the effect of the environment on the structure and assembly of galaxies of any type, from the massive central giant early-type systems to the dwarf galaxies. Despite its regular appearance, it has been found that the assembly of the Fornax cluster is still ongoing. Although its core seems in an evolved phase (Grillmair et al. 1994; Jord an et al. 2007) and most of the bright ($m_B < $  15 mag) cluster members are early-type galaxies (Ferguson 1989), the presence of tidal streams (e.g. Iodice et al. 2016 and D’Abrusco et al. 2016) have revealed that there are still signs of active galaxy interactions in the region inside 200 kpc, which mirrors the large scale activity, including the accretion of the Fornax-A (NGC 1316) subgroup into the cluster core along a cosmic web filament (Drinkwater et al. 2001; Scharf et al. 2005).
+The Fornax cluster is the most massive galaxy structure after the Virgo cluster within 20 Mpc and it is an ideal target to study the effect of the environment on the structure and assembly of galaxies of any type, from the massive central giant early-type systems to the dwarf galaxies. Despite its regular appearance, it has been found that the assembly of the Fornax cluster is still ongoing. Although its core seems in an evolved phase (Grillmair et al. 1994; Jord an et al. 2007) and most of the bright ($m_B < $  15 mag) cluster members are early-type galaxies (Ferguson 1989), the presence of tidal streams (e.g. Iodice et al. 2016, D’Abrusco et al. 2016) have revealed that there are still signs of active galaxy interactions in the region inside 200 kpc, which mirrors the large scale activity, including the accretion of the Fornax-A (NGC 1316) subgroup into the cluster core along a cosmic web filament (Drinkwater et al. 2001; Scharf et al. 2005).
 
-To kinematically map the complexity of the cluster core out to at least 200 kpc using discrete kinematical tracers (e.g. GCs and UCDs) and finally connect the large scale kinematics down to the scale of the dwarf galaxies, we have started a number of spectroscopic follow-ups, which include integral field spectroscopy of dwarf galaxies with MUSE (see Mentz et al. 2016), and the multi-object spectroscopy  with VIMOS/VLT of GC and UCDs candidates. 
+To kinematically map the complexity of the cluster core out to at least 200 kpc using discrete kinematical tracers (e.g. GCs and UCDs) and finally connect the large scale kinematics down to the scale of the dwarf galaxies, we have started a number of spectroscopic follow-ups, which include integral field spectroscopy of dwarf galaxies with MUSE (see Mentz et al. 2016), and the multi-object spectroscopy  of GC and UCDs candidates with VIMOS/VLT.
 
 The radial velocity catalogue of GCs in Fornax presented in this paper is complementary to archival spectroscopic GC datasets of the Fornax cluster: Schuberth et al. (2010a) (which incorporates the catalogue of Dirsch et al.
 2004), Bergond et al. (2007) and other catalogues discussed throughout the text. 
 %There are also planetary nebula datasets around NGC 1399 (Napolitano et al. 2002, McMillan et al. 2010) and NGC 1316 (McMillan et al. 2012) that provide an extension of the stellar kinematics out to several effective radii and overlapping with the area covered by our analysis, which we will use to compare the average properties of the velocity field of the galaxy core.
 Assumed distance is 19.95 Mpc (Tonry et al. 2010).  The ongoing FDS survey is a joint project based on o Guaranteed Time Observation surveys, FOCUS (P.I. R. Peletier) and VEGAS (P.I. E. Iodice, Capaccioli et al. 2015).
 
-The paper is structured as follows: Section \ref{sec:data} describes the data acquisition and reduction. The redshift estimation is discussed in Section \ref{sec:zest} and  results are presented  in Section \ref{sec:analysis}. We summarise the paper and conclude in Section \ref{sec:conclusions}. 
+The paper is structured as follows: Section \ref{sec:data} describes the data acquisition and reduction. The redshift estimation is discussed in Section \ref{sec:zest}, results are presented in Section \ref{sec:analysis} and discussed in \ref{sec:discussion}. We summarise the results of the paper and conclude in Section \ref{sec:conclusions}. 
 
 \section{Data}
 \label{sec:data}
@@ -87,14 +87,14 @@ In the combined 2-colour $giK_s$ diagram, confirmed GCs from \citet{Schuberth} a
 We defined a polygon around the radial velocity members, which serves as prime selection criterion for our GC candidates. 
 Of the 4340 unique spectroscopic targets (see Sect. 2.2) 4321 have $giK_s$ photometry, and 2643 (or $\sim$ 61 \%) of those are confined in the selection polygon. 
 We also applied a magnitude restriction of 17.0$<i<$23.0 mag to our GC candidate sample in order to avoid a severe contamination by foreground stars on the bright side and too low signal-to-noise spectra on the faint side. 
-%The magnitude distribution of the above mentioned 4321 unique spectroscopic targets can be seen in the $(g-i)$ vs. $i$ CMD of Fig.XX (fnxgtocmdgiKadp.pdf).
+%The magnitude distribution of the above mentioned 4321 unique spectroscopic targets can be seen in the $(g-i)$ vs. $i$ CMD of FigureXX (fnxgtocmdgiKadp.pdf).
 
-As an additional criterion we used the published wide-field Washington photometry from \citet{Dirsch04} and \citet{Bassino} to construct a $C-i$ vs. $i-K_s$ diagram. Since the Washington $C$-filter is similar to a $u$-band filter and the $uiK_s$ plane is a very powerful tool to discriminate GCs from fore- and background objects \citep{Munoz14}, the $CiK_s$ plane is the cleanest selection criterion. Unfortunately, the spatial coverage of the Washington photometry is not complete in the central square degree due to chip gaps and the restricted field-of-view. 
+As an additional criterion we used the published wide-field Washington photometry from \citet{Dirsch04} and \citet{Bassino} to construct a $C-i$ vs. $i-K_s$ diagram. Since the Washington $C$-band is similar to a $u$-band filter and the $uiK_s$ plane is a very powerful tool to discriminate GCs from foreground and background objects \citep{Munoz14}, the $CiK_s$ plane is the cleanest selection criterion. Unfortunately, the spatial coverage of the Washington photometry is not complete in the central square degree due to chip gaps and the restricted field-of-view. 
 Out of the 1065 unique spectroscopic targets with $CiK_s$ photometry, 809 (or $\sim$76\%) are within this selection polygon.
 
 Finally, for the very central regions around and on top of NGC~1399, the GC candidate list from ACS photometry by \citet{Puzia14} has been used to select GC candidates for the slit allocation.
 
-The FDS $gi$, the NGFS $K_s$, Washington $C$ as well as the central ACS  photometric catalogs were matched with SExtractor photometry of point and extended sources in all preimages (ESO programme 094.B-0687(A)), which were taken in the $R$-band prior to the spectroscopic observations. The x and y coordinates of sources in the pre-images are needed to create VIMOS catalogs for the creation of mask files with the VMMPS (VIMOS Mask Preparation Software) from ESO.
+The FDS $gi$, the NGFS $K_s$, Washington $C$ as well as the central ACS  photometric catalogs were matched with SExtractor photometry of point and extended sources in all pre-images (ESO programme 094.B-0687(A)), which were taken in $R$-band prior to the spectroscopic observations. The x and y coordinates of sources in the pre-images are needed to create VIMOS catalogs for the creation of mask files with the VMMPS (VIMOS Mask Preparation Software,\citealt{Bottini05}) from ESO.
 
 \subsection{VIMOS pointings and mask design}
 \label{sec:VIMOSpointings}
@@ -110,7 +110,7 @@ For a first automatic slit allocation we used VMMPS with a catalog of GC candida
 In this way, we defined 4574 slits in total for the 25 pointings with a range of 157 to 202 slits per pointing (or 36 to 60 slits per quadrant). In several slits more than one object were targeted if they had the same declination and a small distance in right ascension. Since the fields are overlapping, about 300 targets have been observed twice and four targets even three times through different masks. This allows us to evaluate the systematic uncertainties of the radial velocity measurements and correct for them between different masks. Discounting all duplications, we ended up with about 4340 unique targets
 for which spectra were taken. 
 
-%Those are shown as red dots in Fig.XX (fnxgtocooadp.pdf) together with confirmed GC candidates from previous  radial velocity measurements (blue circles). Our targets and confirmed  members are also shown with the same symbols in the 2-colour diagrams of the $giK_s$ (Fig.XX, fnxgto2colgiKadp.pdf) and $CiK_s$ (Fig.XX, fnxgto2colCiKadp.pdf) planes and the corresponding $(g-i)$ vs. $i$ (Fig.XX, fnxgtocmdgiKadp.pdf) and $(C-i)$ vs. $i$ (Fig.XX, fnxgtocmdCiKadp.pdf) CMDs.
+%Those are shown as red dots in FigureXX (fnxgtocooadp.pdf) together with confirmed GC candidates from previous  radial velocity measurements (blue circles). Our targets and confirmed  members are also shown with the same symbols in the 2-colour diagrams of the $giK_s$ (FigureXX, fnxgto2colgiKadp.pdf) and $CiK_s$ (FigureXX, fnxgto2colCiKadp.pdf) planes and the corresponding $(g-i)$ vs. $i$ (FigureXX, fnxgtocmdgiKadp.pdf) and $(C-i)$ vs. $i$ (FigureXX, fnxgtocmdCiKadp.pdf) CMDs.
 
 \begin{figure}
 \centering
@@ -123,9 +123,9 @@ for which spectra were taken.
 \label{sec:observations}
 
 Spectroscopic observations were carried out with the VIsible MultiObject Spectrograph (VIMOS, \citealt{LeFevre}) in multi-object mode, mounted on the VLT-UT3 Melipal telescope at the ESO Paranal observatory in Chile. 
-The VIMOS spectrograph was equipped with a filter CG475, which cuts off wavelengths bluer than 4750 \AA\ , and a MR grating with a spectral resolution $R = 580$ (or 12.0 \AA\ FWHM) and a dispersion of $2.5$ \AA\ / ~ pix. All slits had a width of 1 arcsec. The pixel scale in the spatial direction was 0.205 arcsec/pix. This setup allows us to explore the spectral window ranging from $4800$ to $10000$~\AA. 
+The VIMOS spectrograph was equipped with a filter CG475, which cuts off wavelengths bluer than 4750 \AA\ , and a MR grating with a spectral resolution $R = 580$ (or 12.0 \AA\ FWHM) and a dispersion of $2.5$ \AA /~pix. All slits had a width of 1 arcsec. The pixel scale in the spatial direction was 0.205 arcsec/pix. This setup allows us to explore the spectral window ranging from $4800$ to $10000$~\AA. 
 
-VIMOS is equipped with four CCDs, arranged in four quadrants with chip gaps of $\sim$2 arcmin in vertical and horizontal direction (see examples of the VIMOS detector footprints in Fig.1). Overall, one VIMOS mask set covers a field-of 4 $\times$ (7 $\times$ 8 arcmin$^2$). All masks were observed for 1.5 hours in total, divided into three dithered exposures by 30 minutes. Observations were carried out in service mode in gray-time conditions between October 2014 and January 2015. The seeing ranged from 0.66 arcsec to 1.15 arcsec, with a median of 0.85 arcsec. 
+VIMOS is equipped with four CCDs, arranged in four quadrants with chip gaps of $\sim$2 arcmin in vertical and horizontal direction (see examples of the VIMOS detector footprints in Figure \ref{fig:fov}). Overall, one VIMOS mask set covers a field of 4 $\times$ (7 $\times$ 8 arcmin$^2$). All masks were observed for 1.5 hours in total, divided into three dithered exposures by 30 minutes. Observations were carried out in service mode in gray-time conditions between October 2014 and January 2015. The seeing ranged from 0.66 arcsec to 1.15 arcsec, with a median of 0.85 arcsec. 
 
 \subsection{Data reduction}
 
@@ -141,7 +141,7 @@ precisely known they can be used for the absolute wavelength calibration of
 the spectra.
 
 In order to obtain the final wavelength calibrated science spectra, we 
-proceded, using the ESO pipeline, as follows: First, a wavelength calibration 
+proceeded as follows. First, a wavelength calibration 
 is performed using the provided arc lamp spectrum. Second, it is calculated
 by how much the sky lines are shifted with respect to their restframe 
 wavelength. For this purpose we provided our own sky line catalog, in which 
@@ -172,7 +172,7 @@ wavelength shift in each multiplex of each mask by taking the average shift
 of all spectra in that multiplex. Then, the wavelength of each stacked 
 spectrum was shifted by an amount as determined by the multiplex and the mask
 in which the spectrum is located. All further analyses were carried out 
-on the in this way corrected spectra.
+on the corrected spectra.
 
 For each mask, the REFLEX pipeline outputs multi-extension fits files which include the 2D spectra, the 1D scientific spectra (and respective errors) and a 2D model of sky lines. To make the dataset more manageable, we implemented a python/astropy script which copies different data structures corresponding to each slit into a multi-extension fits file. Each slit is associated to a fits file which contains: the 1D scientific spectrum, the 1D error spectrum, the sky-subtracted wavelength-corrected 2D spectrum and a thumbnail of the object of $5\times5$ arcsec$^2$ from $g$-band VST imaging. 
 
@@ -191,27 +191,27 @@ Naively, one may think that cross-convolving the full wavelength range of our VI
 
 During the fxcor run, and prior to the correlation with the template spectra, the Fourier-transformed scientific spectra were filtered with a ramp filter. The filter was setup to cut-off noisy high frequencies as well as low frequencies which may result from poor continuum fitting. The continuum was fitted with a cubic spline function.
 
-We ran fxcor in non-interactive mode, meaning that fxcor always returns the velocity corresponding to the highest cross-correlation with the template spectrum. The final radial velocity is the median of the single radial velocities obtained from the cross-correlation with the 40 template star. %Although this choice spared us the manual check of $6700 \times 40 = 2.6 \times 10^5$ spectra, it also increased the likelihood of template mismatch. 
+We ran fxcor in non-interactive mode, meaning that fxcor always returns the velocity corresponding to the highest cross-correlation with the template spectrum. The final radial velocity is the median of the single radial velocities obtained from the cross-correlation with the 40 template stars. %Although this choice spared us the manual check of $6700 \times 40 = 2.6 \times 10^5$ spectra, it also increased the likelihood of template mismatch. 
 To overcome extreme template mismatch (i.e. the case in which the fitted radial velocity varies considerably depending on the template used), we adopted a median-absolute-deviation algorithm (MAD) to flag radial velocities deviating more than 5$\sigma$ from the median of the radial velocities obtained from the 40 template stars. Outliers, if any, are removed from the velocity set and the final radial velocity and error are computed from the remaining measurements. 90 per cent of GCs and stars have between 0 to 5 outliers, suggesting that the effect of extreme template mismatch is small. 
 
-The scatter in radial velocity due to normal template mismatch (i.e. due to intrinsic mixture of stellar populations in GCs) varies between 3 -- 10 \kms (after removing outliers) depending on the signal to noise of the spectrum. The final error on the radial velocity is the median velocity error returned by fxcor summed in quadrature to the scatter due to normal template mismatch. 
-
-\begin{figure}
-\centering
-\includegraphics[width=\columnwidth]{figures/vstack_spectra.png} 
-\caption{A sample of GC spectra. Shown are continuum-normalized redshift-corrected spectra for GCs with increasing $S/N$ (from top to the bottom). The spectrum at the top has $S/N = 15$, the one at the bottom $S/N = 50$. The main atomic lines are labelled on the top. Features such as the strong absorption at Flux $= 2$ or the emission at Flux $=3$ are instrumental artifacts and not physical features of the GC. }
-\label{fig:spectra}
-\end{figure}
+The scatter in radial velocity due to normal template mismatch (i.e. due to intrinsic mixture of stellar populations in GCs) varies between 3 -- 10 \kms (after removing outliers) depending on the $S/N$ of the spectrum. The final error on the radial velocity is the median velocity error returned by fxcor summed in quadrature to the scatter due to normal template mismatch. 
 
 \begin{figure}
 \centering
 \includegraphics[width=\columnwidth]{figures/fxcor_subplot.png} 
-\caption{Results from iraf/fxcor for $\sim$ 4200 spectra. The x-axis represents the Tonry \& Davies R parameter (TDR) which is a proxy for the goodness of the cross-correlation between the scientific and the template spectra. Smaller TDR correspond to larger velocity uncertainties $\delta v$ (bottom panel). The measured radial velocity $v$ is shown on the y-axis of the top panel. The sequence of objects at $v\approx 0 \kms$ are Galactic stars, whereas the grouping at $v\approx1700\kms$ are GC candidates in the Fornax cluster. }
+\caption{Results from iraf/fxcor for $\sim$ 4200 spectra. The x-axis represents the Tonry \& Davies R parameter (TDR) which is a proxy for the goodness of the cross-correlation between the scientific and the template spectra. Smaller TDR corresponds to larger velocity uncertainties $\delta v$ (bottom panel) and therefore to a poorer spectral fit. The measured radial velocity $v$ is shown on the y-axis of the top panel. The sequence of objects at $v\approx 0 \kms$ are Galactic stars, whereas the grouping at $v\approx1700\kms$ are GC candidates in the Fornax cluster. The histogram on the top shows raw counts for stars and Fornax objects only, respectively. }
 \label{fig:tdr}
 \end{figure}
 
-We used the \citep{Tonry79} R factor (TDR hereafter) to asses the goodness of the correlation between scientific spectra and template spectra. As expected, TDR is inversely proportional to the velocity uncertainties. This effect is shown in Figure \ref{fig:tdr}, where TDR is shown as a function of the measured radial velocity $v$ and velocity uncertainty $\delta v$. 
-It is worth noting that fxcor was set to measure the Doppler shift of the CaT lines only for objects with radial velocities $-500 < v < 3000 \kms$. This means that only radial velocities measured to be $-450 < v < 2500 \kms$ are meaningful, and velocities outside this range are by chance correlations, and thus meaningless. Heliocentric correction was applied to all radial velocities . 
+\begin{figure}
+\centering
+\includegraphics[width=\columnwidth]{figures/vstack_spectra.png} 
+\caption{A sample of GC spectra suitably normalised. Shown are continuum-normalized redshift-corrected spectra for GCs with increasing $S/N$ (from top to the bottom). The spectrum at the top has $S/N = 15$, the one at the bottom $S/N = 50$. The main atomic lines are labelled on the top. Features such as the strong absorption at Flux $= 2$ and the emission at Flux $=3$  are instrumental artifacts and not physical features of the GC. The flat horizontal lines between 7000-8000 \AA\ mark regions with masked skylines (see text)}
+\label{fig:spectra}
+\end{figure}
+
+We used the \citet{Tonry79} R factor (TDR hereafter) to asses the goodness of the correlation between scientific spectra and template spectra. As expected, TDR is inversely proportional to the velocity uncertainties. This effect is shown in Figure \ref{fig:tdr}, where TDR is shown as a function of the measured radial velocity $v$ and velocity uncertainty $\delta v$. 
+It is worth noting that fxcor was set to measure the Doppler shift of the CaT lines only for objects with radial velocities $-500 < v < 3000 \kms$. This means that only radial velocities measured to be $-450 < v < 2500 \kms$ are meaningful, and velocities outside this range are by chance correlations, and thus meaningless. Heliocentric correction was applied to all radial velocities. 
 
 \subsection{Disentangling Fornax objects from foreground and background contamination}
 
@@ -298,7 +298,7 @@ The object at $\alpha=$3:36:37.253 $\delta=$ -35:23:09.20 is the nucleus of the 
 %Our catalogue also includes the UCD FCSS J033854.1-353333,  with radial velocity $v_r = 1492 \kms$ \citet{Chilingarian11}. 
 
 \section{Discussion}
-\label{sec:conclusions}
+\label{sec:discussion}
 In this section we discuss some qualitative properties of the final dataset. We look at the spatial distribution and phase-space diagrams. A detailed kinematic and dynamic analysis (rotation curve, dark matter modelling, luminosity function analysis) will be subject of forthcoming papers.
 
 \begin{figure*}
@@ -366,12 +366,12 @@ When split in the red and blue subpopulations the GC sample shows some systemati
 
 Finally, we report in the same Figure the central velocity dispersion values of the galaxies populating the same area occupied by the total GC catalog. The central value of NGC 1399 is consistent with the typical central raise of the velocity dispersion in the center of massive galaxies where is the potential on the galaxy which dominates. At larger distances one might expect that galaxy might contaminate to the overall GC kinematics. Especially in the outer regions, i.e. $R>10$ arcmin, assuming these regions dominated by the cluster potential, the presence of GCs bound to the galaxies might alter the true  intracluster population. A detailed separation of the bound GC population from the true unbound (from any galaxy in the core) GCs will be addressed in a forthcoming paper. Here we just remark that the impact of the bound GC population has to be limited because, roughly speaking, it should dilute the true dispersion by a quantity that it is abut the difference in quadrature of the true dispersion and the one of the bound sample (i.e. assuming the central velocity dispersion of the galaxy). If so, then the dilution can be as large as 10-15$\%$, which is enough to explain the saddle in the  $v_{\rm rms}$ profile in the radius range $15<R<28$ arcmin in correspondence of the bins overlapping with NGC~1387, NGC~1389, NGC~1381 and NGC~1379, while a similar correction for NGC~1404 would increase the intrinsic $v_{\rm rms}$ to $\sim400$ km s $^{-1}$.
 
-In conclusion of this section, we can summarise the main finding of this paper in Fig. 9, by saying that the unprecedented extension of the GC kinematics, combined with the literature data, has demonstrated the kinematical signature of a population of intracluster GCs, made of both Red GCs and Blue GCs. The two populations show $v_{\rm rms}$ profiles consistent with the dynamics of a common cluster potential and also consistent with the velocity dispersion of the innermost cluster galaxies in the Fornax cluster. 
+In conclusion of this section, we can summarise the main finding of this paper in Figure 9, by saying that the unprecedented extension of the GC kinematics, combined with the literature data, has demonstrated the kinematical signature of a population of intracluster GCs, made of both Red GCs and Blue GCs. The two populations show $v_{\rm rms}$ profiles consistent with the dynamics of a common cluster potential and also consistent with the velocity dispersion of the innermost cluster galaxies in the Fornax cluster. 
 
 Analogous signatures of intracluster stellar populations have been shown previously in the Virgo cluster \citep[see e.g., ][]{Arnaboldi04, Longobardi15} but the Fornax catalog presented here will offer a unique chance to perform a fully dynamical analysis of both the bound and unbound GC populations.
 
 \section{Conclusions}
-
+\label{sec:conclusions}
 In this paper, we presented the results of a large  spectroscopic survey of GCs in the Fornax cluster, focusing on observations, data reduction and compilation of the final catalogue. The survey is part of the ongoing Fornax Deep Survey, which aims to study the formation, evolution and dynamics of galaxies and small stellar systems in the Fornax cluster and of its members.
 
 Our results are based on observations with VST/OmegaCam for imaging and 25 VST/VIMOS masks for spectroscopic follow-up. Objects were pre-selected in multi-band imaging, supported also by the many spectroscopic catalogues already present for this region of the sky.  Approximately 4500 objects were observed. The total observation time was 37.5 hours, mostly in sub-arcsec seeing conditions. Data reduction was performed using the ESO VIMOS pipeline. Redshifts were extracted using iraf/fxcor, whereas the remaining data analysis was carried out using the python suite. Only the Calcium Triplet region was used for redshift estimation, but the quality of the fit was assessed using the full spectrum from 4800 to 10000 \AA\ .
