finished CT comments

--- a/pota.tex
+++ b/pota.tex
@@ -223,7 +223,7 @@ Spectra of Fornax objects (GCs, UCDs) and Galactic star candidates were redshift
 Figure \ref{fig:spectra} showcases some spectra with $S/N$ ranging from 50 (bottom spectrum) to 15 (top spectrum). 
 The GG475-filters of the first and third quadrant, coupled with the MR-grism, introduce an absorption feature between about $5600 < \lambda < 6300 \AA\ $ (see the third spectrum from the bottom in Figure \ref{fig:spectra} for an example). This occurs because the GG475-filter is composed of 10-20\% in its weight by sodium oxide. Impure manufacturing likely caused this feature, however, it does not affect our analysis because the blue part of the spectra is not used for our velocity measurements. Strong emission features can occasionally appear in the blue part of the spectra (see the fifth spectrum from the bottom in Figure \ref{fig:spectra}), but they are attributed to zero order overlaps that are not corrected for by the Reflex reduction pipeline rather than to physical phenomena in associated to the light source. 
 
-For spectra with very low $S/N$ the distinction between atomic lines and noise features becomes somewhat subjective. Therefore, the spectra of all 850 Fornax object candidates were independently eyeballed by five members of the team. We gave a vote of $1$ to spectra which were certainly Fornax objects and $0$ to non-Fornax object spectra. We found that 323 spectra received a vote of 5/5 (meaning that these spectra were classified as Fornax objects by all members of the team), 348 spectra received a vote of 4/5 and 420 spectra received a vote of 3/5. In the followings, we will use the last set of 420 spectra as our final spectroscopic catalogue of the Fornax cluster. 
+For spectra with very low $S/N$ the distinction between atomic lines and noise features becomes somewhat subjective. Therefore, all 850 Fornax object candidates were independently eyeballed by five members of the team. The inspection was performed on a dashboard including the 2D image of the source, the redshift corrected spectrum and attributes such as magnitude and S/N. We gave a vote of $1$ to spectra which were certainly Fornax objects and $0$ to non-Fornax object spectra. We found that 323 spectra received a vote of 5/5 (meaning that these spectra were classified as Fornax objects by all members of the team), 348 spectra received a vote of 4/5 and 420 spectra received a vote of 3/5. In the followings, we will use the last set of 420 spectra as our final spectroscopic catalogue of the Fornax cluster. 
 
 We repeated the above procedure to select a sample of spectroscopically confirmed Galactic stars with radial velocities in the range $-450<v<+450 \kms$, finding a total of 492 Galactic stars.
 
@@ -238,7 +238,7 @@ We averaged the radial velocities of the duplicated GCs and summed in quadrature
 \begin{figure}
 \centering
 \includegraphics[width=\columnwidth]{figures/internal.png} 
-\caption{Internal velocity comparison. The figure shows the velocity difference $\delta v$between  GCs with two independent velocity measurements. The full line and dashed line represent $\delta v = 0 \kms$ and $\delta v = \pm 100 \kms$, respectively. }
+\caption{Internal velocity comparison. The figure shows the velocity difference $\delta v$ between  GCs with two independent velocity measurements. The full and dashed line represent $\delta v = 0 \kms$ and $\delta v = \pm 100 \kms$, respectively. }
 \label{fig:internal}
 \end{figure}
 
@@ -248,7 +248,7 @@ The stellar systems surrounding NGC~1399 has been in the focus of many spectrosc
 \citep{Dirsch04, Schuberth10, Bergond07, Firth07, Chilingarian11, Mieske04, Hilker07, Francis12, Drinkwater00}.
 
 To find which of our VIMOS objects have a literature counterpart, we matched our catalogue of 387 Fornax objects with the NED (Nasa/Ipac Extragalactic Database) database using the python/astropy tools. 
-We manually added the catalogue of \citet{Schuberth} to the literature database, because all 693 GCs from \citep{Schuberth} are not in NED. We required the literature object to have a measured radial velocity and to be within 0.4 arcsec from our VIMOS source. 
+We manually added the catalogue of \citet{Schuberth} to the literature database, because all 693 GCs from \citet{Schuberth} are not in NED. We required the literature objects to have a measured radial velocity and to be within 0.4 arcsec from our VIMOS source. 
 
 In most cases, the literature counterpart has been observed from more than one author. Table \ref{tab:authors} reports the number of objects per author for which we have a VIMOS radial velocity. 
 In order to compare literature velocities with our VIMOS velocities, we averaged together the radial velocities of unique objects observed in multiple literature studies. Uncertainties were summed in quadrature. Overall, we found 48 of our Fornax objects to have a literature counterpart. 
@@ -290,7 +290,7 @@ Paper & Number of duplicated objects \\
 
 \subsection{Classification of Fornax objects}
 
-We classified all Fornax objects based on their type: namely GCs, ultra compact dwarfs (UCDs) and galaxies. The spatial resolution of VST/OmegaCam is insufficient to resolve the typical half-light radii of GCs with $r_h < 10 pc$ \citep{Masters}. Although the size of UCDs with $r_h > 20$ pc can be resolved using our imaging data \citep{Cantiello15}, measuring UCD sizes is not the focus of this paper and will be deferred to a future work.
+We classified all Fornax objects based on their type: namely GCs, ultra compact dwarfs (UCDs) and background galaxies. The spatial resolution of VST/OmegaCam is insufficient to resolve the typical half-light radii of GCs with $r_h < 10 pc$ \citep{Masters}. Although the size of UCDs with $r_h > 20$ pc can be resolved using our imaging data \citep{Cantiello15}, measuring UCD sizes is not the focus of this paper and will be deferred to a future work.
 
 It is established that a net magnitude cut cannot perfectly separate UCDs from GCs. However, the recent work of \citet{Voggel16} has shown that the bulk of UCDs with confirmed sizes in the Fornax cluster have $M_V \le 10$ ($\approx M_i \le 11$). Therefore, we use this magnitude cut as benchmark value to separate UCDs with $i \le 20.3$ from GCs with $i > 20.3$. This selection returns 15 UCDs and 372 GCs. 
 
@@ -305,17 +305,17 @@ In this section we discuss some qualitative properties of the final dataset. We 
 \centering
 \includegraphics[width=\columnwidth]{figures/RV.png} 
 \includegraphics[width=\columnwidth]{figures/XY.png} 
-\caption{\textit{Left}: Phase-space velocity diagram. The figure shows the measured systemic velocity of the Fornax objects presented in this paper (orange points), GCs from \citet{Schuberth} (grey crosses), GCs from \citep{Bergond07} (greys points) and Galactic stars measured in this paper (green points). The systemic velocity of NGC~1399 is marked with a dashed line at $v = 1425$ km s$^{-1}$. The systemic velocity and galactocentric distance of giant Fornax galaxies (namely NGC~1404, NGC~1387, NGC~1380) are shown as red crosses. Physical distances in kpc are also shown on the top panel. \textit{Right}: Position diagram. The plot shows the spatial distribution of the objects from the left panel (except for Galactic stars for clarity). The distance is expressed in arcminutes from the centre of NGC~1399. Physical distances in kpc are also shown on the top panel.  Note how the GCs from our paper complement the GC catalogues of \citet{Schuberth} and \citep{Bergond07}. }
+\caption{\textit{Left}: Phase-space velocity diagram. The figure shows the measured systemic velocity of the Fornax objects presented in this paper (orange points), GCs from \citet{Schuberth} (grey crosses), GCs from \citet{Bergond07} (greys points) and Galactic stars measured in this paper (green points). The systemic velocity of NGC~1399 is marked with a dashed line at $v = 1425$ km s$^{-1}$. The systemic velocity and galactocentric distance of giant Fornax galaxies (namely NGC~1404, NGC~1387, NGC~1380) are shown as red crosses. Physical distances in kpc are also shown on the top panel. \textit{Right}: Position diagram. The plot shows the spatial distribution of the objects from the left panel (except for Galactic stars for clarity). The distance is expressed in arcminutes from the centre of NGC~1399. Physical distances in kpc are also shown on the top panel.  Note how the GCs from our paper complement the GC catalogues of \citet{Schuberth} and \citep{Bergond07}. }
 \label{fig:phase-space}
 \end{figure*}
 
 \subsection{Phase-space and spatial distribution}
 
-The phase-space diagram and the spatial distribution are show in Figure \ref{fig:phase-space}. In both cases, GCs, UCDs and Galactic stars are compared to the catalogues of \citet{Bergond07} and \citet{Schuberth}. These two catalogues are the largest and most homogeneous in the literature. Moreover, the catalogue of Schuberth is an extension of the catalogue of \citet{Dirsch04}. Together they include sources within 18 arcmin from NGC~1399. Bergond's catalogue was designed to target intra-cluster globular clusters and it is more radially extended (see also Figure \ref{fig:fov}). It covers a strip of about 1.5 degree in right ascension and half a degree in declination. The catalogues of Schuberth and Bergond combined, provide a good representation of the current archival phase-space and spatial distribution of the GC system in the core of the Fornax cluster. 
+The phase-space diagram and the spatial distribution are shown in Figure \ref{fig:phase-space}. In both cases, GCs, UCDs and Galactic stars are compared to the catalogues of \citet{Bergond07} and \citet{Schuberth}. These two catalogues are the largest and most homogeneous in the literature. Moreover, the catalogue of Schuberth is an extension of the catalogue of \citet{Dirsch04}. Together they include sources within 18 arcmin from NGC~1399. Bergond's catalogue was designed to target intra-cluster globular clusters and it is more radially extended (see also Figure \ref{fig:fov}). It covers a strip of about 1.5 degree in right ascension and half a degree in declination. The catalogues of Schuberth and Bergond combined provide a good representation of the current archival phase-space and spatial distribution of the GC system in the core of the Fornax cluster. 
 
 The left figure shows that the velocity distribution of GCs/UCDs is well separated from that of Galactic stars, although a few GCs between $10<R<20$ arcmin might be misclassified Galactic stars. It is also clear that the velocity distribution of GCs is skewed towards bluer velocities, an effect already noticed in \citep{Schuberth}. 
 
-The systemic velocity of GCs and UCDs is $v_{\rm GCs} = 1443 \pm 18 \kms$ and $v_{\rm UCDs} = 1413 \pm 91 \kms$, respectively. These are both consistent with the average systemic velocity from the literature $v_{\rm NED}1425 \pm 4 \kms$. Our sample also includes interlopers from large galaxies surrounding NGC~1399, in particular NGC~1380, NGC~1404, NGC~1387. The position of these three galaxies in the phase-space diagram is marked with a red cross. 
+The systemic velocity of GCs and UCDs is $v_{\rm GCs} = 1443 \pm 18 \kms$ and $v_{\rm UCDs} = 1413 \pm 91 \kms$, respectively. These are both consistent with the average systemic velocity from the literature $v_{\rm NED} = 1425 \pm 4 \kms$. Our sample also includes interlopers from large galaxies surrounding NGC~1399, in particular NGC~1380, NGC~1404, NGC~1387. The position of these three galaxies in the phase-space diagram is marked with a red cross. 
 
 It is not trivial to disentangle the GC population of NGC~1380 and NGC~1404 because of their proximity in phase-space to NGC~1399. 
 Here we adopt a conservative approach to extract the GC system of these galaxies, but we acknowledge that more complex methodologies can return more accurate results. Following \citet{Schuberth}, we use 3 arcmin from the galaxy centre as a benchmark radius to select the bulk of GCs associated with these galaxies. We also require that the radial velocity of the GCs should be within $v_{\rm sys} \pm 2\sigma$  the systemic velocity of the host galaxy, where $\sigma$ is the galaxy stellar velocity dispersion. Here we used $\sigma = 247 \kms$  \citep{Vanderbeke11}, $v_{\rm sys} = 1947 \kms$ for NGC~1404 and $\sigma = 170 \kms$ \citep{Wegner03}, $v_{\rm sys} = 1302\kms $ for NGC~1387, respectively. After applying the above selection criteria, we found 17 and 8 GCs associated with NGC~1404 and NGC~1387, respectively. The larger number of GCs associated to NGC~1404 is a due to the galaxy being more massive than NGC~1387, but also to its proximity to NGC~1399 which increases the fraction of contaminants.
@@ -337,11 +337,11 @@ GC systems which are bond to other giant galaxies can be seen clustered around t
 
 %\citet{DAbrusco16} used the same photometric dataset we used in this paper to show that the colour distribution of GCs in NGC~1399 is bimodal, as found in all giant galaxies. Bimodality usually translates into different physical properties of the blue (metal-poor) and red (metal-rich) GCs, such as spatial distribution, kinematics which are probably linked to different formation scenarios. 
 
-Figure \ref{fig:cc} displays the distribution of GCs/UCDs in the photometric space. These are compared with the distribution of all sources targeted for spectroscopic follow-up, including Galactic stars and background galaxies. Although the $u$ filter is known to well discriminate GCs from contaminants, here we only consider $g$, $r$, $i$ magnitudes because all but one GCs/UCDs have a genuine measurement in these photometric bands, whereas only 50\% of our GCs/UCDs have a $u$-band measurement. This is due to $u$-band imaging being to shallow for detecting faint GCs \citep{DAbrusco16}.
+Figure \ref{fig:cc} displays the distribution of GCs/UCDs in the photometric space. These are compared with the distribution of all sources targeted for spectroscopic follow-up, including Galactic stars and background galaxies. Although the $u$ filter is known to well discriminate GCs from contaminants, here we only consider $g$, $r$, $i$ magnitudes because all but one GCs/UCDs have a genuine measurement in these photometric bands, whereas only 50\% of our GCs/UCDs have a $u$-band measurement. This is due to $u$-band imaging being too shallow for detecting faint GCs \citep{DAbrusco16}.
 
-GCs/UCDs and contaminants are not well separated using merely $g$, $r$, $i$ filters, but velocity information clearly separates GCs/UCDs from Galactic stars and background galaxies. This is also shown in Figure \ref{fig:cc}. The left-bottom panel, with $(g-i)$ vs .$v$, shows how the velocity dispersion of blue GCs with $(g-i) \le 1$ is higher with respect to that of the red GCs, a property shared with GC systems in most giant galaxies. The rightmost panel, with $v$ vs $i$, shows that the velocity distribution of all GCs is skewed towards lower velocities (a property also visible in Figure \ref{fig:phase-space}). The convincing separation between GCs and stars also ensures that that this property is unlikely due miss-classified GCs. 
+GCs/UCDs and contaminants are not well separated using merely $g$, $r$, $i$ filters, but velocity information clearly separates GCs/UCDs from Galactic stars and background galaxies. This is also shown in Figure \ref{fig:cc}. The left-bottom panel, with $(g-i)$ vs .$v$, shows how the velocity dispersion of blue GCs with $(g-i) \le 1$ is higher with respect to that of the red GCs, a property shared with GC systems in the most giant galaxies. The rightmost panel, with $v$ vs $i$, shows that the velocity distribution of all GCs is skewed towards lower velocities (a property also visible in Figure \ref{fig:phase-space}). The convincing separation between GCs and stars also ensures that this property is unlikely due miss-classified GCs. 
 
-\subsection{Root mean square velocity profile}
+\subsection{Root-mean-square velocity profile}
 The root-mean-square velocity $v_{\rm rms}$ quantifies the total kinetic energy of a stellar system. It accounts both for the ordered and for the random stellar motions. Here we compute the root-mean-square velocity as:
 \begin{equation}
 v_{\rm rms}^2 = \frac{1}{N}  \sum (v_i - v_{\rm sys})^2 - (\Delta v_i)^2 .
@@ -362,9 +362,9 @@ Figure \ref{fig:vrms} displays the $v_{\rm rms}$ profile for: i) our combined ma
 
 The master catalogue contains GCs and UCDs predominantly from NGC 1399, which is the largest and more massive system in the field dominating the total potential in the core of the cluster. Here, objects from other galaxies, embedded in the extended exponential halo around the galaxy (Iodice et al. 2016), in particular NGC 1404, NGC 1387, are likely to contaminate the kinematics of the central galaxies. However, looking at the $v_{\rm rms}$ profile of the total sample (shaded gray area) there is a steep raise of the profile around $R\sim10$ arcmin which marks a kinematical transition from a ``colder'' kinematical region to a ``warmer'' one. In the outermost region, the $v_{\rm rms}$ profile flattens out to a value which is fairly consistent with the kinematics of the cluster galaxies (the green data point at $R\sim35’$ from \citealt{Drinkwater00}). This suggests that the GC kinematics at radii larger than 10 arcmin is ruled by the cluster potential. This feature, kinematically demonstrates that the transition radius between the bright central galaxy and the outer exponential halo at $R\sim10$ arcmin from \citet{Iodice16} represents the radius where we observe the emergence of an intracluster population of GCs. A similar conclusion is found from the new observations of PNe from Spiniello et al. (2018), hence all evidences converging, for the first time, on a clear photometrical and kinematical evidence of the intracluster light in the Fornax Cluster.
 
-When split in the red and blue subpopulations the GC sample shows some systematic differences. At all radii the $v_{\rm rms}$ profile of the red GCs is systematically smaller than the one of the blue GCs.  In the innermost regions at $R < 10$ arcmin they are consistent with the results from Schuberth et al. (2010a). In particular the blue GCs turned out to be the more extended population in radius, nicely matching the value of the cluster galaxy datapoint. The difference in normalisation between the two population is mainly deriving from the different slope of the two population density profiles as measured, e.g., by Schuberth et al. (2010a, their Eq. 10 and 11 and Table 5). However, the difference of the measured slopes are so small that using Eq. 2 to 4 in Napolitano et al. (2014) to determine the expected change in the normalisation of the two profiles, we have found that for a $\sigma \sim 300$ km s $^{-1}$ of the RGC value the estimated BGC value of $v_{\rm rms}$ is $\sim 308$ km s $^{-1}$, i.e. consistent with what measured for the Blue GC datapoint.
+When split in the red and blue subpopulations the GC sample shows some systematic differences. At all radii the $v_{\rm rms}$ profile of the red GCs is systematically smaller than the one of the blue GCs.  In the innermost regions at $R < 10$ arcmin they are consistent with the results from Schuberth et al. (2010a). In particular the blue GCs turned out to be the more extended population in radius, nicely matching the value of the cluster galaxy datapoint. The difference in normalisation between the two populations is mainly deriving from the different slopes of the two populations density profiles as measured, e.g., by Schuberth et al. (2010a, their Eq. 10 and 11 and Table 5). However, the difference of the measured slopes are so small that using Eq. 2 to 4 in Napolitano et al. (2014) to determine the expected change in the normalisation of the two profiles, we have found that for a $\sigma \sim 300$ km s $^{-1}$ of the RGC value the estimated BGC value of $v_{\rm rms}$ is $\sim 308$ km s $^{-1}$, i.e. consistent with what measured for the Blue GC datapoint.
 
-Finally, we report in the same Figure the central velocity dispersion values of the galaxies populating the same area occupied by the total GC catalog. The central value of NGC 1399 is consistent with the typical central raise of the velocity dispersion in the center of massive galaxies where is the potential on the galaxy which dominates. At larger distances one might expect that galaxy might contaminate to the overall GC kinematics. Especially in the outer regions, i.e. $R>10$ arcmin, assuming these regions dominated by the cluster potential, the presence of GCs bound to the galaxies might alter the true  intracluster population. A detailed separation of the bound GC population from the true unbound (from any galaxy in the core) GCs will be addressed in a forthcoming paper. Here we just remark that the impact of the bound GC population has to be limited because, roughly speaking, it should dilute the true dispersion by a quantity that it is abut the difference in quadrature of the true dispersion and the one of the bound sample (i.e. assuming the central velocity dispersion of the galaxy). If so, then the dilution can be as large as 10-15$\%$, which is enough to explain the saddle in the  $v_{\rm rms}$ profile in the radius range $15<R<28$ arcmin in correspondence of the bins overlapping with NGC~1387, NGC~1389, NGC~1381 and NGC~1379, while a similar correction for NGC~1404 would increase the intrinsic $v_{\rm rms}$ to $\sim400$ km s $^{-1}$.
+Finally, we report in the same Figure the central velocity dispersion values of the galaxies populating the same area occupied by the total GC catalog. The central value of NGC 1399 is consistent with the typical central raise of the velocity dispersion in the center of massive galaxies where is the potential on the galaxy which dominates. At larger distances one might expect that galaxy might contaminate to the overall GC kinematics. Especially in the outer regions, i.e. $R>10$ arcmin, assuming these regions dominated by the cluster potential, the presence of GCs bound to the galaxies might alter the true  intracluster population. A detailed separation of the bound GC population from the true unbound (from any galaxy in the core) GCs will be addressed in a forthcoming paper. Here we just remark that the impact of the bound GC population has to be limited because, roughly speaking, it should dilute the true dispersion by a quantity that it is roughly the difference in quadrature of the true dispersion and the one of the bound sample (i.e. assuming the central velocity dispersion of the galaxy). If so, then the dilution can be as large as 10-15$\%$, which is enough to explain the saddle in the  $v_{\rm rms}$ profile in the radius range $15<R<28$ arcmin in correspondence of the bins overlapping with NGC~1387, NGC~1389, NGC~1381 and NGC~1379, while a similar correction for NGC~1404 would increase the intrinsic $v_{\rm rms}$ to $\sim400$ km s $^{-1}$.
 
 In conclusion of this section, we can summarise the main finding of this paper in Figure 9, by saying that the unprecedented extension of the GC kinematics, combined with the literature data, has demonstrated the kinematical signature of a population of intracluster GCs, made of both Red GCs and Blue GCs. The two populations show $v_{\rm rms}$ profiles consistent with the dynamics of a common cluster potential and also consistent with the velocity dispersion of the innermost cluster galaxies in the Fornax cluster. 
 
